--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 			<a [routerLink]="['/component-two']">Component Two</a>
 		</li>
 		<li>
-			<a [routerLink]="[{ outlets: { 'sidebar': ['component-aux'] } }]">Component Aux</a>
+			<a [routerLink]="[{ outlets: { 'bottom-outlet': ['component-aux'] } }]">Component Aux</a>
 		</li>
 	</ul>
 </nav>
@@ -19,5 +19,5 @@
 
 <div style="color: green; margin-top: 1rem;">Sidebar Outlet:</div>
 <div style="border: 2px solid blue; padding: 1rem;">
-	<router-outlet name="sidebar"></router-outlet>
+	<router-outlet name="bottom-outlet"></router-outlet>
 </div>
