--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,10 @@
     <li>
       <a [routerLink]="['/standalone']">STANDALONE</a>
     </li>
+    <li></li>
+    <li>
+      <a [routerLink]="['/feature']">Feature</a>
+    </li>
 	</ul>
 </nav>
 
