--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
     <li>
       <a [routerLink]="['/feature']">Feature</a>
     </li>
+    <li>
+      <a [routerLink]="['/profile']">Profile (Requires authorisation)</a>
+    </li>
 	</ul>
 </nav>
 
