--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,10 @@
 body {
   font-family: 'Baloo Da 2', cursive;
 }
+
+@import "~bootstrap/dist/css/bootstrap.css";  
+
+/* You can add global styles to this file, and also import other style files */
+.body-content {
+  margin-top: 2em;
+}
