--- a/src/app/category/category-list.component.html
+++ b/src/app/category/category-list.component.html
@@ -18,8 +18,8 @@
     </thead>
     <tbody>
       <tr *ngFor="let category of categories">      
-        <td>{{category.categoryId}}</td>
-        <td>{{category.categoryName}}</td>
+        <td>{{category.CategoryId}}</td>
+        <td>{{category.CategoryName}}</td>
       </tr>
     </tbody>
   </table>
