--- a/src/app/product/product-detail.component.html
+++ b/src/app/product/product-detail.component.html
@@ -34,8 +34,8 @@
               class="form-control"
               [(ngModel)]="product.CategoryId">
         <option *ngFor="let category of categories"
-                value="{{category.categoryId}}">
-          {{category.categoryName}}
+                value="{{category.CategoryId}}">
+          {{category.CategoryName}}
         </option>
       </select>
     </div>
