--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h1>
+<div style="padding: 10px;">
   Angular Scratchpad {{ title ? " - " + title : "" }}
-</h1>
+</div>
 <hr>
 <div class="container">
   <nav class="navbar navbar-expand-md navbar-light bg-light">
