preparing login screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="padding: 10px;">
+<div class="main-title">
   Angular Scratchpad {{ title ? " - " + title : "" }}
 </div>
 <hr>
@@ -16,6 +16,10 @@
         <a class="nav-item nav-link" routerLink="/settings">Settings</a>
         <a class="nav-item nav-link" routerLink="/logmaintenance">Logs</a>
       </div>
+    </div>
+    <div class="navbar-nav ml-auto">
+      <a class="nav-item nav-link" routerLink="/login">Login</a>
+      <a class="nav-item nav-link" routerLink="/register">Register</a>
     </div>
   </nav>
 </div>
