--- a/src/app/shared/security/login/login.component.html
+++ b/src/app/shared/security/login/login.component.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="alert alert-danger" *ngIf="securityObject &&
-             !securityObject.isAuthenticated">
+             !securityObject.IsAuthenticated">
             <p>Invalid User Name/Password.</p>
         </div>
     </div>
