--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navItems">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" routerLink="/products">Products</a>
-        <a class="nav-item nav-link" *ngIf="securityObject?.CanAccessCategories" routerLink="/categories">Categories</a>
-        <a class="nav-item nav-link" *ngIf="securityObject?.CanAccessSettings" routerLink="/settings">Settings</a>
-        <a class="nav-item nav-link" *ngIf="securityObject?.CanAccessLogs" routerLink="/logmaintenance">Logs</a>
+        <a class="nav-item nav-link" *ngIf="canAccessProducts" routerLink="/products">Products</a>
+        <a class="nav-item nav-link" *ngIf="canAccessCategories" routerLink="/categories">Categories</a>
+        <a class="nav-item nav-link" *ngIf="canAccessSettings" routerLink="/settings">Settings</a>
+        <a class="nav-item nav-link" *ngIf="canAccessLogs" routerLink="/logmaintenance">Logs</a>
       </div>
     </div>
     <div class="navbar-nav ml-auto">
