--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,15 @@
+/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
 body {
   font-family: 'Baloo Da 2', cursive;
 }
+
+div.card-header {
+  font-size: large;
+ }
+ 
+ div.card {
+   margin-top: 20px;
+   margin-left: 10px;
+ }
