--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <div class="title">
   Angular Scratchpad {{ title ? " - " + title : "" }}
 </div>
-<hr>
 
 <nav class="navbar navbar-expand navbar-light bg-light">
-  <a class="navbar-brand">{{ title }}</a>
+  <!-- <a class="navbar-brand">{{ title }}</a> -->
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link"
