--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -1,7 +1,6 @@
-<div class="card"
-     *ngIf="product">
+<div class="card" *ngIf="product$ | async as product">
   <div class="card-header">
-    {{pageTitle}}
+    {{ pageTitle }}
   </div>
 
   <div class="card-body">
