--- a/src/app/cart/cart-total/cart-total.component.html
+++ b/src/app/cart/cart-total/cart-total.component.html
@@ -26,7 +26,7 @@
 
     <div class="row">
       <div class="col-md-5"><b>Total:</b></div>
-      <div class="col-md-4 text-end"><b>{{ totalPrice | currency}}</b></div>
+      <div class="col-md-4 text-end"><b>{{ totalPrice() | currency}}</b></div>
     </div>
   </div>
 </div>
