Initial Auth0 Config

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="title">
   Angular Scratchpad {{ title ? " - " + title : "" }}
 </div>
+
+<div>
+  <button (click)="onLoginButtonClick()">Login</button>
+</div>
