--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,15 @@
 <div>
   <button (click)="onLoginButtonClick()">Login</button>
 </div>
+
+<div>
+  <button (click)="onLogoutButtonClick()">Logout</button>
+</div>
+
+<br>
+
+<a routerLink="/profile" class="dropdown-item dropdown-profile">
+  Profile
+</a>
+
+<router-outlet></router-outlet>
