--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,35 @@
 .title {
   font-size: 1rem;
-  padding: 3px 0;
+  padding: .5rem 1.25rem;
   border-bottom: 1px solid rgba(52, 58, 64, 0.5);
+}
+.header {
+  display: flex;
+  align-items: center;
+  background-color: var(--color-primary);
+  color: var(--font-color-dark-bg);
+  font-size: 32px;
+  padding: 15px 20px;
+  margin: 0;
+}
+
+.logo {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  padding: 5px 20px;
+  margin: 0 auto;
+  max-width: 1280px;
+  min-width: 650px;
+}
+
+.profile {
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
 }
