--- a/src/app/edit-contact/edit-contact.component.html
+++ b/src/app/edit-contact/edit-contact.component.html
@@ -7,7 +7,7 @@
       <nav>Name/Info</nav>
       <div>
         <input formControlName="firstName" placeholder="First Name" />
-        <span style="color: red;" *ngIf="contactForm?.controls?.firstName?.invalid && contactForm?.controls?.firstName?.touched">
+        <span style="color: red;" *ngIf="firstName.invalid && firstName?.touched">
           Please enter a valid name
         </span>
         {{ contactForm.controls.firstName.errors | json  }} <br>
