--- a/src/app/profile-icon-selector/profile-icon-selector.component.html
+++ b/src/app/profile-icon-selector/profile-icon-selector.component.html
@@ -1,5 +1,7 @@
-<ul>
+<ul *ngIf="showAllIcons">
     <li *ngFor="let icon of profileIcons">
-       <img [src]="'/assets/profile/' + icon" [alt]="icon"/>
+       <img [src]="'/assets/profile/' + icon" (click)="iconSelected(icon)" [class.selected]="icon === selectedIcon" [alt]="icon"/>
     </li>
 </ul>
+
+<img [src]="'/assets/profile/' + selectedIcon" *ngIf="!showAllIcons" (click)="showAllIcons = true" />
