Binding a custom component to a FormControl

--- a/src/app/edit-contact/edit-contact.component.html
+++ b/src/app/edit-contact/edit-contact.component.html
@@ -6,7 +6,7 @@
     <section>
       <nav>Name/Info</nav>
       <div>
-        <app-profile-icon-selector></app-profile-icon-selector>
+        <app-profile-icon-selector formControlName="icon"></app-profile-icon-selector>
         <input formControlName="firstName" placeholder="First Name" />
         <span style="color: red;" *ngIf="firstName.invalid && firstName?.touched">
           Please enter a valid name
