Preferred Phone number

--- a/src/app/edit-contact/edit-contact.component.html
+++ b/src/app/edit-contact/edit-contact.component.html
@@ -40,6 +40,9 @@
               <input type="radio" formControlName="phoneType" [value]="phoneType.value"> {{ phoneType.title }}
             </span>
           </div>
+          <span>
+            <input type="checkbox" formControlName="preferred" /> Preferred
+          </span>
         </div>
       </div>
     </section>
