--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="title">
-  Angular Scratchpad {{ title ? " - " + title : "" }}
+  Angular Sandbox {{ title ? " - " + title : "" }}
 </div>
