--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div class="title">
+  Angular Sandbox {{ title ? " - " + title : "" }}
+</div>
 <button (click)="loadFromServer()">Load Links</button>
 
 <div *ngIf="observable$ | async as observable; else indicator">
