--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,12 @@
   animation: rotation 1s infinite linear;
   margin: 1rem;
 }
-
+.title {
+  padding: 10px 0;
+  font-size: 1rem;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 1rem;
+}
 @keyframes rotation {
   from {
     transform: rotate(0deg);
