--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="title">
   Angular Sandbox {{ title ? " - " + title : "" }}
 </div>
-<div style="width: 90%; margin: 0 auto;">
+<div class="main">
   <router-outlet></router-outlet>
 </div>
