--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 .title {
   font-size: 1rem;
-  padding: 3px 0;
+  padding: 1rem;
+  color: red;
   border-bottom: 1px solid rgba(52, 58, 64, 0.5);
 }
 
