--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,31 @@
 <div class="title">
   Angular Sandbox {{ title ? " - " + title : "" }}
 </div>
+
+<header>
+  <nav class="navbar">
+    <a class="navbar-title" href="#">NgRx Fundamentals</a>
+    <ul class="navbar-list">
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          routerLink="/"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >home</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          routerLink="/products"
+          routerLinkActive="active-link"
+          >products</a
+        >
+      </li>
+    </ul>
+  </nav>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
