--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,10 @@
   padding: 3px 0;
   border-bottom: 1px solid rgba(52, 58, 64, 0.5);
 }
+
+.content {
+  margin: 82px auto 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
