--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <div class="title">
   Angular Sandbox {{ title ? " - " + title : "" }}
 </div>
+
+<div>
+  <p appSubtitle>This is the first paragraph</p>
+  <p appSubtitle>This is the second paragraph</p>
+  <p appSubtitle>This is the third paragraph</p>
+</div>
