--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
   <p appSubtitle>This is the first paragraph</p>
   <p appSubtitle>This is the second paragraph</p>
   <p appSubtitle>This is the third paragraph</p>
+  {{ $any(this.contacts)?.email }}
 </div>
