Pipes with multiple parameters

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,7 @@
   <p appSubtitle>This is the third paragraph</p>
   {{ $any(this.contacts)?.email }}
 </div>
+
+<div>
+  <p>{{ 2048 | fileSize:'GB': 5 }}</p>
+</div>
