--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,5 @@
   Angular Sandbox {{ title ? " - " + title : "" }}
 </div>
 
-<a routerLink="/">Home</a> | <a routerLink="/about">About</a>
-
-<div>
-  <p appSubtitle>This is the first paragraph</p>
-  <p appSubtitle>This is the second paragraph</p>
-  <p appSubtitle>This is the third paragraph</p>
-  {{ $any(this.contacts)?.email }}
-</div>
-
-<div>
-  <p>{{ 2048 | fileSize:'GB': 5 }}</p>
-</div>
-
-
+<app-home></app-home>
 <router-outlet></router-outlet>
