--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   Angular Sandbox {{ title ? " - " + title : "" }}
 </div>
 
-<app-home></app-home>
+<!-- <app-optimized-images></app-optimized-images> -->
 <router-outlet></router-outlet>
