--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,9 @@
   padding: 3px 0;
   border-bottom: 1px solid rgba(52, 58, 64, 0.5);
 }
+
+
+[nz-button] {
+  margin-right: 8px;
+  margin-bottom: 12px;
+}
