--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,35 @@
 <div class="title">
   Angular Sandbox {{ title ? " - " + title : "" }}
 </div>
+<br>
+<button nz-button nzType="primary">Primary Button</button>
+<button nz-button nzType="default">Default Button</button>
+<button nz-button nzType="dashed">Dashed Button</button>
+<button nz-button nzType="text">Text Button</button>
+<a nz-button nzType="link">Link Button</a>
+<br>
+
+
+<nz-tabset
+  [(nzSelectedIndex)]="selectedIndex"
+  nzType="editable-card"
+  (nzAdd)="newTab()"
+  (nzClose)="closeTab($event)"
+>
+  <nz-tab *ngFor="let tab of tabs" nzClosable [nzTitle]="tab">Content of {{ tab }}</nz-tab>
+</nz-tabset>
+
+<br>
+
+<button nz-button nzType="primary" (click)="showModal()">
+  <span>Show Modal</span>
+</button>
+<nz-modal
+  [(nzVisible)]="isVisible"
+  nzTitle="Modal Title"
+  (nzOnCancel)="handleCancel()"
+  (nzOnOk)="handleOk()"
+  [nzOkLoading]="isOkLoading"
+>
+  <p *nzModalContent>Modal Content</p>
+</nz-modal>
