--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,3 +33,75 @@
 >
   <p *nzModalContent>Modal Content</p>
 </nz-modal>
+
+<br>
+
+<nz-steps [nzCurrent]="1">
+  <nz-step nzTitle="Finished" nzDescription="This is a description."></nz-step>
+  <nz-step nzTitle="In Progress" nzSubtitle="Left 00:00:08" nzDescription="This is a description."></nz-step>
+  <nz-step nzTitle="Waiting" nzDescription="This is a description."></nz-step>
+</nz-steps>
+
+<br>
+
+<nz-radio-group [(ngModel)]="size">
+  <label nz-radio-button nzValue="large">Large</label>
+  <label nz-radio-button nzValue="default">Default</label>
+  <label nz-radio-button nzValue="small">Small</label>
+</nz-radio-group>
+<br />
+<br />
+<button nz-button [nzSize]="size" nzType="primary">Primary</button>
+<button nz-button [nzSize]="size" nzType="default">Default</button>
+<button nz-button [nzSize]="size" nzType="dashed">Dashed</button>
+<a nz-button [nzSize]="size" nzType="link">Link</a>
+<br />
+<button nz-button nzType="primary" [nzSize]="size"><span nz-icon nzType="download"></span></button>
+<button nz-button nzType="primary" [nzSize]="size" nzShape="circle"><span nz-icon nzType="download"></span></button>
+<button nz-button nzType="primary" [nzSize]="size" nzShape="round"><span nz-icon nzType="download"></span></button>
+<button nz-button nzType="primary" [nzSize]="size" nzShape="round">
+  <span nz-icon nzType="download"></span>
+  Download
+</button>
+<button nz-button nzType="primary" [nzSize]="size">
+  <span nz-icon nzType="download"></span>
+  Download
+</button>
+<br />
+<nz-button-group [nzSize]="size">
+  <button nz-button nzType="primary">
+    <span nz-icon nzType="left"></span>
+    Backward
+  </button>
+  <button nz-button nzType="primary">
+    Forward
+    <span nz-icon nzType="right"></span>
+  </button>
+</nz-button-group>
+
+<br>
+
+
+<nz-space>
+  <button *nzSpaceItem nz-button nzType="primary" (click)="showDefault()">Open Default Size (378px)</button>
+  <button *nzSpaceItem nz-button nzType="primary" (click)="showLarge()">Open Large Size (736px)</button>
+</nz-space>
+<nz-drawer
+  [nzSize]="drawerSize"
+  [nzVisible]="drawerVisible"
+  nzPlacement="right"
+  [nzTitle]="drawerTitle"
+  [nzExtra]="extra"
+  (nzOnClose)="close()"
+>
+  <ng-container *nzDrawerContent>
+    <p>Some contents...</p>
+    <p>Some contents...</p>
+    <p>Some contents...</p>
+  </ng-container>
+</nz-drawer>
+<ng-template #extra>
+  <button nz-button nzType="default" (click)="close()">Cancel</button>
+  &nbsp;
+  <button nz-button nzType="primary" (click)="close()">OK</button>
+</ng-template>
