Icon and Input modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,3 +105,9 @@
   &nbsp;
   <button nz-button nzType="primary" (click)="close()">OK</button>
 </ng-template>
+
+<app-page-header />
+
+<hr>
+
+<app-inputs />
