--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
 body {
   font-family: 'Baloo Da 2', cursive;
 }
+
+html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
