--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="title">
   Angular Sandbox {{ title ? " - " + title : "" }}
 </div>
+<div #messagesContainer class="chat-box">
+  <div *ngFor="let message of messages">{{ message }}</div>
+</div>
+<button (click)="addMessage('New Message!')">Send Message</button>
