Directive declaration and usage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="title">
   Angular Sandbox {{ title ? " - " + title : "" }}
 </div>
+
+<p highlight color="orangered">Hover over me to see the highlight effect!</p>
+<p highlight>Default yellow highlight on hover!</p>
